Fix: Search Textarea Auto-Collapse Issue

--- a/static/css/query-builder.css
+++ b/static/css/query-builder.css
@@ -289,6 +289,7 @@ input.form-control {
 
 #custom-code-tab.ui-widget.ui-widget-content {
     width: 100% !important;
+    z-index: 1;
 }
 
 .custom-code-tab {
